public class GameConfig
{
    // ANIMATION
    // I. Player, Enemy
    public static string ATTACK_TRIGGER = "Attack";
    public static string JUMP_TRIGGER = "Jump";
    public static string HIT_TRIGGER = "Hit";
    public static string RUN_BOOL = "IsRunning";
    public static string DEAD_BOOL = "IsDead";
    public static string IDLE_BOOL = "IsIdle";
    // II. Bomb
    public static string EXPLODE_TRIGGER = "Explode";

    // TRIGGER
    public static string PLAYER_HITBOX = "Player Hitbox";

    // TAG
    public static string PLAYER_TAG = "Player";
    public static string ENEMY_TAG = "Enemy";
    public static string BOMB_TAG = "Bomb";
    public static string WALL_TAG = "Wall";
    public static string GROUND_TAG = "Ground";
    public static string SPECIAL_BASE_TAG = "Special Base";
    public static string BASE_TAG = "Base";
}